--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -33,3 +33,17 @@
     margin: 20px 0;
     line-height: 1.6;
 }
+/* media query */
+@media (max-width: 800px){
+    .about{
+        flex-direction: column;
+    }
+    .about-left{
+        flex-basis: 100%;
+        margin: 20px;
+        order: 2;
+    }
+    .about-right{
+        flex-basis: 100%;
+    }
+}
