--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,6 +1,5 @@
-nav{
+nav {
     width: 100%;
-    /* background: #333; */
     color: #fff;
     padding: 4px 0;
     position: fixed;
@@ -11,16 +10,117 @@ nav{
     justify-content: space-between;
     z-index: 10;
 }
-.logo{
+
+.logo {
     width: 100px;
 }
-nav ul li{
+
+nav ul li {
     display: inline-block;
     list-style: none;
     margin: 5px 20px;
     font-size: 16px;
 }
-.dark-nav{
-    background:#003da5;
-    transition: .5s;
+
+.dark-nav {
+    background: #003da5;
+    transition: 0.5s;
+}
+
+.cross {
+    display: none;
+}
+
+/* ---------- MENU ICON ---------- */
+.menu-icon {
+    position: absolute;
+    top: 50%;
+    right: 30px;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 30px;
+    cursor: pointer;
+    display: none;
+    z-index: 999;
+}
+
+/* Hamburger lines */
+.menu-icon::before,
+.menu-icon::after {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 3px;
+    background: white;
+    transition: 0.4s ease;
+}
+
+.menu-icon::before {
+    transform: translateY(-8px);
+    box-shadow: 0 8px white;
+}
+
+.menu-icon::after {
+    transform: translateY(8px);
+}
+
+/* Cross (when menu is active) */
+.menu-icon.active::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+}
+
+.menu-icon.active::after {
+    transform: rotate(-45deg);
+}
+
+/* media query */
+@media (max-width: 1352px) {
+    .logo {
+        width: 140px;
+    }
+
+    nav ul li {
+        margin: 10px 15px;
+    }
+}
+
+@media (max-width: 1161px) {
+    nav {
+        padding: 15px 0;
+    }
+
+    /* SIDEBAR MENU */
+    .side-nav {
+        position: fixed;
+        top: 0;
+        right: -250px; /* Hidden off-screen */
+        bottom: 0;
+        background: #212ea0;
+        z-index: 998;
+        width: 250px;
+        padding-top: 70px;
+        transition: right 0.4s ease-in-out;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .side-nav.open {
+        right: 0; /* Slide in */
+    }
+
+    .side-nav li {
+        display: block;
+        margin: 25px 40px;
+    }
+
+    /* Show hamburger icon */
+    .menu-icon {
+        display: block;
+    }
+
+    nav ul:not(.side-nav) {
+        display: none;
+    }
 }
